# bot-prim

./: .gitignore  AGENT_GUIDE.md  DEPLOYMENT.md  MANIFEST.in  README.md  RELEASE.md  RELEASE_NOTES.md  SETUP_GITHUB_ABOUT.md  SOLUTION_FIREWALL.md  STREAMLIT_DEPLOYMENT.md  agent.py  app.py  check_database.py  check_qdrant.py  create_env.py  env.example  fix_connection_string.py  fix_postgresql_connection.py  gemini_adapter_partial.py  ingest.py  init_kb.py  knowledge_base.py  knowledge_base_qdrant.py  migrate_to_qdrant.py  migrate_to_supabase.py  packages.txt  primbot_cli.py  pyproject.toml  requirements.txt  scraper.py  setup.py  setup_supabase.py  setup_supabase_pooling.py  storage_local.py  storage_supabase.py  test_image_filtering.py  test_images.py  test_supabase_alternative.py  test_supabase_api.py  test_supabase_connection.py
.github/: ABOUT.md  DESCRIPTION.txt  SETUP_ABOUT.md
.github/workflows/: release.yml  test-qdrant.yml
.streamlit/: config.toml  secrets.toml.example
chroma_db/f14d0815-5d5b-4e27-b8c9-0c9c20ef5830/: index_metadata.pickle
docs/: CLI_INSTALLATION.md  CLI_USAGE.md  DEPLOY_KB.md  FIX_POSTGRESQL_FIREWALL.md  FREE_AI_GUIDE.md  GITHUB_SECRETS.md  LOCAL_TESTING.md  QDRANT_MIGRATION.md  RELEASE.md  STORAGE_OPTIONS.md  STREAMLIT_DEPLOYMENT.md  SUPABASE_SETUP.md  SUPABASE_TROUBLESHOOTING.md
