[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primbot"
version = "1.0.0"
description = "PRIMBOT CLI - PrimLogix Debug Agent with Gemini AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dev-NTIC"}
]
keywords = ["primlogix", "ai", "cli", "gemini", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit",
    "openai",
    "beautifulsoup4",
    "chromadb",
    "sentence-transformers",
    "html2text",
    "requests",
    "google-generativeai",
]

[project.scripts]
primbot = "primbot_cli:main"

[project.urls]
Homepage = "https://github.com/carlcgb/bot-prim"
Repository = "https://github.com/carlcgb/bot-prim"
Issues = "https://github.com/carlcgb/bot-prim/issues"

