[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primbot"
version = "1.0.4"
description = "PRIMBOT - PrimLogix Debug Agent (Streamlit)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dev-NTIC"}
]
keywords = ["primlogix", "ai", "gemini", "assistant", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit",
    "beautifulsoup4",
    "chromadb",
    "qdrant-client",
    "sentence-transformers",
    "html2text",
    "requests",
    "google-genai",
    "pillow",
    "ddgs",
]

[project.urls]
Homepage = "https://github.com/carlcgb/bot-prim"
Repository = "https://github.com/carlcgb/bot-prim"
Issues = "https://github.com/carlcgb/bot-prim/issues"

